provide image alignment styles for tinymce images fixes https://github.com/plone/Products.CMFPlone/issues/499

--- a/Products/CMFPlone/static/plone.less
+++ b/Products/CMFPlone/static/plone.less
@@ -104,3 +104,15 @@
 .icon-zope:before { content: '\e825'; } /* '' */
 .icon-types:before { content: '\e826'; } /* '' */
 
+/* tinymce added image styles */
+.image-left {
+  float: left;
+  margin: 0.5em 1em 0.5em 0;
+}
+.image-right {
+  float: right;
+  margin: 0.5em;
+}
+.image-inline {
+  float: none;
+}
